# follow_me_robot

./: .gitignore  CMakeLists.txt  README.md
follow_me_robot/: __init__.py
install/: local_setup.sh  setup.sh
install/follow_me_robot/lib/follow_me_robot/: follower_node.py
install/follow_me_robot/share/follow_me_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/follow_me_robot/share/follow_me_robot/cmake/: follow_me_robotConfig.cmake
install/follow_me_robot/share/follow_me_robot/urdf/: cylinder.urdf.xacro  robot.urdf.xacro
install/follow_me_robot/share/follow_me_robot/worlds/: follow_me.sdf
launch/: robot_launch.py
log/: latest_build
